# simple-calculator-with-cpp

./: CMakeLists.txt  README.md  calculator.cpp  calculator.h  main.cpp  test.cpp
